ES|QL|DS: exclusion entries are resource patterns, and the default only matches file names
file_inclusions and the _*=* carve-out are gone. That carve-out was a proxy for
'this is a hive partition directory', and it only held for partition_detection:
hive — under template the directories are bare values with no '=', nothing was
rescued, and a partition named _foo/ was dropped silently along with its rows.
This is the defect the whole exclusion design existed to remove, and it is now
removed by construction rather than answered by a second list.

An entry is an ordinary resource pattern, compiled by the same GlobMatcher and
matched against the same prefix-relative path. One language, one semantics, one
string. The default is ['**/_*', '**/.*'], which full-matches exactly the paths
whose FINAL segment starts with '_' or '.', because '*' cannot cross a separator.
It therefore cannot touch a directory, so no partition of any detection mode is
at risk. Pinned end to end with a template dataset whose value starts with '_'.

The cost, taken deliberately: junk directories are no longer excluded by default.
A failed job's _temporary/ holds real data files and they will be read until the
dataset names '**/_temporary/**' — one line, and unlike a wildcard over directory
names it cannot swallow somebody's partition. Both _temporary and _delta_log now
have read-by-default-excluded-when-named tests rather than assertions that they
vanish.

The equivalence pin became a delta record: every path where the new default
disagrees with the frozen old predicate, tagged and explained. The randomized half
found a case I had not reasoned my way to — a FILE named like a partition, '_x=y',
which the old carve-out rescued in leaf position and the default now drops. It is
recorded as the one family moving in the dropping direction rather than papered
over.

Also fixes a defect the E2E surfaced: needsRecursion only checked for '**', so a
multi-segment glob such as '*/*.parquet' listed non-recursi